--- a/app/views/protests/_social.html.erb
+++ b/app/views/protests/_social.html.erb
@@ -1,15 +1,12 @@
 <div style="float: right;">
  <div style="float: left; clear: none; padding: 5px; padding-left: 5.5px; padding-right: 5.5px;">
-  <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="lbenitez">Tweet</a>
+  <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a>
  </div>
  <div style="float: left; clear: none; padding: 5px; padding-left: 5.5px; padding-right: 5.5px;">
   <g:plusone></g:plusone>
  </div>
  <div style="float: left; clear: none; padding: 5px; padding-left: 5.5px; padding-right: 5.5px;">
-  <iframe src="http://www.facebook.com/plugins/like.php?app_id=166725596724792&amp;href=
-<%=url%>&amp;send=false&amp;layout=button_count&amp;width=75
-&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21"
- scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:75px; height:21px;" allowTransparency="true"></iframe>
+	<iframe src="http://www.facebook.com/plugins/like.php?app_id=205356566188481&amp;href=<%=url%>&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
  </div>
 </div>
 
