--- a/app/views/protests/index.html.erb
+++ b/app/views/protests/index.html.erb
@@ -34,7 +34,7 @@
 	<%= link_to (image_tag 'http://www.retailpartnersinc.com/resources/start-button.jpg', :class => 'start_new', :alt => 'Start'), new_protest_path %>
 </h1>
 
-<%= render 'social', url: protests_path%>
+<%= render 'social', url: protests_url %>
 <div id="map_canvas"></div>
 
 <table>
