--- a/app/views/protests/show.html.erb
+++ b/app/views/protests/show.html.erb
@@ -27,7 +27,7 @@
 <h1><%=@protest.title%> at <%=@protest.city%></h1>
 <h2><%=@protest.slogan%></h2>
 
-<%= render 'social', url: protest_path(@protest)%>
+<%= render 'social', url: protest_url(@protest)%>
 <div id="map_canvas"></div>
 
 <p>
