--- a/app/views/protests/index.html.erb
+++ b/app/views/protests/index.html.erb
@@ -30,7 +30,7 @@
 
 <h1>
 	<%= image_tag 'http://3.bp.blogspot.com/-9Sh9sVYsyIc/TZ3rQbmgQlI/AAAAAAAAAGA/jdCgQBs1PM8/s1600/anna-hazare.png', :class => 'logo' %>
-	Support Anna Hazare! Start/Join a protest
+	Support Anna Hazare! Start/Join a peaceful protest
 	<%= link_to (image_tag 'http://www.retailpartnersinc.com/resources/start-button.jpg', :class => 'start_new', :alt => 'Start'), new_protest_path %>
 </h1>
 
